--- a/infomation/location-soil-seed.html
+++ b/infomation/location-soil-seed.html
@@ -11,8 +11,8 @@
         <div id="menu">
             <ul>
                 <li>
-                    <a href="index.html">
-                        <img src="image/Earthy Garden logo.png" alt="logo" id="web-logo">
+                    <a href="/index.html">
+                        <img src="/image/Earthy Garden logo.png" alt="logo" id="web-logo">
                     </a>
                 </li>
                 <li><a href="#">INFOMATION</a>
